add PM2 configuration and update build script in package.json

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
-    
+    "preview": "vite preview",
+    "start": "pm2 start pm2.config.js --watch"
+  
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
