--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,51 @@
 name: Deploy
-on: 
+
+on:
   push:
-    branches: 
+    branches:
       - main
+
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.2.2
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Setup Node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+
+      - name: Build project
+        run: npm run build
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v4
         with:
-          node-version: 20
-      - name: Install pnpm
-        uses: jjs98/pnpm-install-action@v6
-      - name: Build client
-        run: pnpm build
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v4.6.0
-        with:
+          name: production-files
           path: ./dist
 
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: production-files
           path: ./dist
+
+      - name: Ensure gh-pages branch exists
+        run: |
+          git fetch origin gh-pages || git checkout --orphan gh-pages
+          git push origin gh-pages
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
