--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          git config --global user.email ${{ vars.EMAIL }}
+          git config --global user.email "paolonemax@gmail.com"
           git config --global user.name "mxpln"
           npm install -g gh-pages
           gh-pages -d dist
