--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
           git config --global user.email "paolonemax@gmail.com"
           git config --global user.name "mxpln"
           npm install -g gh-pages
-          gh-pages -d dist -t $GITHUB_TOKEN
+          gh-pages -d dist
